--- a/about.html
+++ b/about.html
@@ -247,12 +247,7 @@
         <div class="container">
           <div class="row">
             <div
-              class="
-                offset-xl-3
-                col-xl-6
-                offset-lg-2
-                col-lg-8 col-md-12 col-sm-12
-              "
+              class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 col-md-12 col-sm-12"
             >
               <h1 class="inactive">I am Ayush a UI UX Designer</h1>
               <p
@@ -260,7 +255,7 @@
                 data-scroll-reveal="enter bottom move 50px over 0.4s after 0.2s"
                 class=""
               >
-                Hi 👋, I'm Ayush
+                Hi <span class="waving-hand">👋</span>, I'm Ayush
               </p>
               <div
                 data-scroll-reveal="enter bottom move 50px over 0.6s after 0.6s"
@@ -316,11 +311,7 @@
           </div>
           <div class="col-lg-1"></div>
           <div
-            class="
-              col-lg-6 col-md-12 col-sm-12
-              align-self-center
-              mobile-top-fix
-            "
+            class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix"
             data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
           >
             <div class="left-heading">
@@ -372,12 +363,7 @@
       <div class="container">
         <div class="row">
           <div
-            class="
-              col-lg-5 col-md-12 col-sm-12
-              align-self-center
-              mobile-bottom-fix-big
-              show-on-mobile
-            "
+            class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-mobile"
             data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
           >
             <img
@@ -390,11 +376,7 @@
             />
           </div>
           <div
-            class="
-              col-lg-6 col-md-12 col-sm-12
-              align-self-center
-              mobile-bottom-fix
-            "
+            class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-bottom-fix"
             data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
           >
             <div class="left-heading">
@@ -420,12 +402,7 @@
           </div>
           <div class="col-lg-1"></div>
           <div
-            class="
-              col-lg-5 col-md-12 col-sm-12
-              align-self-center
-              mobile-bottom-fix-big
-              show-on-desktop
-            "
+            class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-desktop"
             data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
           >
             <img
@@ -460,11 +437,7 @@
           </div>
           <div class="col-lg-1"></div>
           <div
-            class="
-              col-lg-6 col-md-12 col-sm-12
-              align-self-center
-              mobile-top-fix
-            "
+            class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix"
             data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
           >
             <div class="left-heading">
@@ -1708,11 +1681,7 @@
           </div>
           <div class="col-lg-1"></div>
           <div
-            class="
-              col-lg-6 col-md-12 col-sm-12
-              align-self-center
-              mobile-top-fix
-            "
+            class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix"
             data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
           >
             <div class="left-heading">
@@ -1846,15 +1815,6 @@
                     class="download"
                     title="Download Resume"
                     >Resume</a
-                  ></span
-                >
-                and
-                <span
-                  ><a
-                    href="https://bit.ly/ayushkumar"
-                    class="download"
-                    title="Download Portfolio"
-                    >Portfolio</a
                   ></span
                 >
               </p>
