--- a/faqs.html
+++ b/faqs.html
@@ -281,11 +281,7 @@
             </div>
             <div class="col-lg-1"></div>
             <div
-              class="
-                col-lg-6 col-md-12 col-sm-12
-                align-self-center
-                mobile-top-fix
-              "
+              class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix"
               data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
             >
               <div class="left-heading">
@@ -348,12 +344,7 @@
         <div class="container">
           <div class="row">
             <div
-              class="
-                col-lg-5 col-md-12 col-sm-12
-                align-self-center
-                mobile-bottom-fix-big
-                show-on-mobile
-              "
+              class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-mobile"
               data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
             >
               <img
@@ -366,11 +357,7 @@
               />
             </div>
             <div
-              class="
-                col-lg-6 col-md-12 col-sm-12
-                align-self-center
-                mobile-bottom-fix
-              "
+              class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-bottom-fix"
               data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
             >
               <div class="left-heading">
@@ -403,12 +390,7 @@
             </div>
             <div class="col-lg-1"></div>
             <div
-              class="
-                col-lg-5 col-md-12 col-sm-12
-                align-self-center
-                mobile-bottom-fix-big
-                show-on-desktop
-              "
+              class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-desktop"
               data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
             >
               <img
@@ -442,11 +424,7 @@
             </div>
             <div class="col-lg-1"></div>
             <div
-              class="
-                col-lg-6 col-md-12 col-sm-12
-                align-self-center
-                mobile-top-fix
-              "
+              class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix"
               data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
             >
               <div class="left-heading">
@@ -497,12 +475,7 @@
         <div class="container">
           <div class="row extra-pad">
             <div
-              class="
-                col-lg-5 col-md-12 col-sm-12
-                align-self-center
-                mobile-bottom-fix-big
-                show-on-mobile
-              "
+              class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-mobile"
               data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
             >
               <img
@@ -515,11 +488,7 @@
               />
             </div>
             <div
-              class="
-                col-lg-6 col-md-12 col-sm-12
-                align-self-center
-                mobile-bottom-fix
-              "
+              class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-bottom-fix"
               data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
             >
               <div class="left-heading">
@@ -550,12 +519,7 @@
             </div>
             <div class="col-lg-1"></div>
             <div
-              class="
-                col-lg-5 col-md-12 col-sm-12
-                align-self-center
-                mobile-bottom-fix-big
-                show-on-desktop
-              "
+              class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-desktop"
               data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
             >
               <img
@@ -589,11 +553,7 @@
             </div>
             <div class="col-lg-1"></div>
             <div
-              class="
-                col-lg-6 col-md-12 col-sm-12
-                align-self-center
-                mobile-top-fix
-              "
+              class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix"
               data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
             >
               <div class="left-heading">
@@ -632,12 +592,7 @@
         <div class="container">
           <div class="row extra-pad">
             <div
-              class="
-                col-lg-5 col-md-12 col-sm-12
-                align-self-center
-                mobile-bottom-fix-big
-                show-on-mobile
-              "
+              class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-mobile"
               data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
             >
               <img
@@ -650,11 +605,7 @@
               />
             </div>
             <div
-              class="
-                col-lg-6 col-md-12 col-sm-12
-                align-self-center
-                mobile-bottom-fix
-              "
+              class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-bottom-fix"
               data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
             >
               <div class="left-heading">
@@ -687,12 +638,7 @@
             </div>
             <div class="col-lg-1"></div>
             <div
-              class="
-                col-lg-5 col-md-12 col-sm-12
-                align-self-center
-                mobile-bottom-fix-big
-                show-on-desktop
-              "
+              class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-desktop"
               data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
             >
               <img
@@ -726,11 +672,7 @@
             </div>
             <div class="col-lg-1"></div>
             <div
-              class="
-                col-lg-6 col-md-12 col-sm-12
-                align-self-center
-                mobile-top-fix
-              "
+              class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix"
               data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
             >
               <div class="left-heading">
@@ -770,12 +712,7 @@
         <div class="container">
           <div class="row extra-pad">
             <div
-              class="
-                col-lg-5 col-md-12 col-sm-12
-                align-self-center
-                mobile-bottom-fix-big
-                show-on-mobile
-              "
+              class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-mobile"
               data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
             >
               <img
@@ -788,11 +725,7 @@
               />
             </div>
             <div
-              class="
-                col-lg-6 col-md-12 col-sm-12
-                align-self-center
-                mobile-bottom-fix
-              "
+              class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-bottom-fix"
               data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
             >
               <div class="left-heading">
@@ -821,12 +754,7 @@
             </div>
             <div class="col-lg-1"></div>
             <div
-              class="
-                col-lg-5 col-md-12 col-sm-12
-                align-self-center
-                mobile-bottom-fix-big
-                show-on-desktop
-              "
+              class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-desktop"
               data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
             >
               <img
@@ -860,11 +788,7 @@
             </div>
             <div class="col-lg-1"></div>
             <div
-              class="
-                col-lg-6 col-md-12 col-sm-12
-                align-self-center
-                mobile-top-fix
-              "
+              class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix"
               data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
             >
               <div class="left-heading">
@@ -1167,15 +1091,6 @@
                     class="download"
                     title="Download Resume"
                     >Resume</a
-                  ></span
-                >
-                and
-                <span
-                  ><a
-                    href="https://bit.ly/ayushkumar"
-                    class="download"
-                    title="Download Portfolio"
-                    >Portfolio</a
                   ></span
                 >
               </p>
