--- a/index.html
+++ b/index.html
@@ -227,11 +227,13 @@
                 <li><a href="#work">Work</a></li>
                 <li><a href="testimonials">Testimonials</a></li>
                 <li><a href="about">My Story</a></li>
-                <li><a href="#contact-us">Contact</a></li>
                 <li><a href="mentorship">Mentorship</a></li>
+                <li><a href="#contact-us">Contact</a></li>
                 <li class="inactive"><a href="solutions">Solutions</a></li>
                 <li class="inactive"><a href="work">Work</a></li>
-                <li><a href="faqs">FAQs</a></li>
+                <li class="inactive">
+                  <a href="faqs">FAQs</a>
+                </li>
                 <li class="inactive">
                   <a href="reviews">Mentorship Reviews</a>
                 </li>
@@ -252,12 +254,7 @@
         <div class="container">
           <div class="row">
             <div
-              class="
-                offset-xl-3
-                col-xl-6
-                offset-lg-2
-                col-lg-8 col-md-12 col-sm-12
-              "
+              class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 col-md-12 col-sm-12"
             >
               <h1 class="inactive">I am Ayush a ui ux designer</h1>
               <p
@@ -276,12 +273,11 @@
                 </h1>
                 <p style="font-weight: 500">A Full Stack Designer</p>
                 <a
-                  href="#work"
-                  aria-label="See work"
+                  href="https://calendly.com/designedbyayush/call"
                   class="main-button-slider"
-                  title="See my work"
-                  aria-label="See work"
-                  >See work</a
+                  title="Book Free 30min Consultation on Calendly"
+                  aria-label="Book Free 30min Consultation on Calendly"
+                  >Book Clarity Call</a
                 >
               </div>
               <section id="section10" class="demo pdesk">
@@ -306,7 +302,7 @@
             id="center"
             style="font-size: 28px; letter-spacing: 1px"
           >
-            How I help others?
+            I help tech companies with
           </h2>
           <br /><br />
           <div class="col-lg-12">
@@ -420,7 +416,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="center-heading">
-              <h2 class="section-title pdesk">Projects that makes me blush</h2>
+              <h2 class="section-title pdesk">Projects that make me blush</h2>
               <h2 class="section-title pmob">Case Studies</h2>
             </div>
           </div>
@@ -457,7 +453,10 @@
               </div>
               <div class="blog-content">
                 <h3>MissionEd</h3>
-                <div class="text">Branding, Designing, Development</div>
+                <div class="text">
+                  Reimagining Education with IIT graduates which aims for
+                  personalized learning.
+                </div>
                 <a
                   href="https://ayushkumar.me/missioned/"
                   class="project-button"
@@ -490,7 +489,10 @@
               </div>
               <div class="blog-content">
                 <h3>Zebo.ai</h3>
-                <div class="text">Designing and Development</div>
+                <div class="text">
+                  Redesigning an AI Dermatology Brand to resonate with their
+                  target demographic.
+                </div>
                 <a href="https://ayushkumar.me/zebo.ai/" class="project-button"
                   >Know More &nbsp; <i class="fas fa-arrow-right"></i
                 ></a>
@@ -521,7 +523,10 @@
               </div>
               <div class="blog-content">
                 <h3>Preplaced</h3>
-                <div class="text">Branding, Design and Consultation</div>
+                <div class="text">
+                  Revolutionizing the interviewing and placement ecosystem with
+                  tech.
+                </div>
                 <a
                   href="https://www.figma.com/proto/0rex50DSbe6qPz6kUuqwJG/Case-Studies?node-id=0%3A1"
                   class="project-button"
@@ -560,7 +565,10 @@
               </div>
               <div class="blog-content">
                 <h3>Dridh Sankalp</h3>
-                <div class="text">Branding and Designing</div>
+                <div class="text">
+                  Recreating an NGO's human experience and making people feel a
+                  part of it
+                </div>
                 <a
                   href="https://www.figma.com/proto/0rex50DSbe6qPz6kUuqwJG/Case-Studies?node-id=1%3A4"
                   class="project-button"
@@ -593,7 +601,10 @@
               </div>
               <div class="blog-content">
                 <h3>Harry's Portfolio</h3>
-                <div class="text">Design and Development</div>
+                <div class="text">
+                  Helping a developer friend in articulating his personal
+                  portfolio.
+                </div>
                 <a
                   href="https://ayushkumar.me/harry-portfolio/"
                   class="project-button"
@@ -626,7 +637,10 @@
               </div>
               <div class="blog-content">
                 <h3>My Portfolio</h3>
-                <div class="text">Designing and Development</div>
+                <div class="text">
+                  Crafting a online presence though design, storytelling, and
+                  web-development.
+                </div>
                 <a href="https://ayushkumar.me/" class="project-button"
                   >Know More &nbsp; <i class="fas fa-arrow-right"></i
                 ></a>
@@ -1056,13 +1070,13 @@
           <div class="row">
             <div class="col-lg-3 col-md-6 col-sm-12">
               <div class="count-item decoration-bottom">
-                <strong>50</strong>
+                <strong>100</strong>
                 <span>Projects</span>
               </div>
             </div>
             <div class="col-lg-3 col-md-6 col-sm-12">
               <div class="count-item decoration-top">
-                <strong>15</strong>
+                <strong>25</strong>
                 <span>Happy Clients</span>
               </div>
             </div>
@@ -1074,7 +1088,7 @@
             </div>
             <div class="col-lg-3 col-md-6 col-sm-12">
               <div class="count-item">
-                <strong>3</strong>
+                <strong>5</strong>
                 <span>Years</span>
               </div>
             </div>
@@ -1121,7 +1135,7 @@
                 <div class="price-wrapper">
                   <span class="currency">$</span>
                   <span class="price">50</span>
-                  <span class="period">per project</span>
+                  <span class="period">onwards</span>
                 </div>
                 <ul class="list">
                   <li class="active">Product Audit</li>
@@ -1150,7 +1164,7 @@
                 <div class="price-wrapper">
                   <span class="currency">$</span>
                   <span class="price">1000</span>
-                  <span class="period">per project</span>
+                  <span class="period">onwards</span>
                 </div>
                 <ul class="list">
                   <li class="active">Product Audit</li>
@@ -1183,7 +1197,7 @@
                 <div class="price-wrapper">
                   <span class="currency">$</span>
                   <span class="price">Custom</span>
-                  <span class="period">per project</span>
+                  <span class="period">onwards</span>
                 </div>
                 <ul class="list">
                   <li class="active">Strategy</li>
@@ -1292,15 +1306,6 @@
                     >Resume</a
                   ></span
                 >
-                and
-                <span
-                  ><a
-                    href="https://bit.ly/ayushkumar"
-                    class="download"
-                    title="Download Portfolio"
-                    >Portfolio</a
-                  ></span
-                >
               </p>
               <p id="aboutme">
                 <a href="mailto:hey@ayushkumar.me" class="mailto" title="Email"
@@ -1321,7 +1326,7 @@
       data-mode="popover"
       target="_blank"
     >
-      <span class="icon">
+      <span class="icon chat-circle">
         <img
           alt="contact-me"
           src="assets/images/chat-icon.svg"
