--- a/mentorship.html
+++ b/mentorship.html
@@ -261,12 +261,7 @@
         <div class="container">
           <div class="row">
             <div
-              class="
-                offset-xl-3
-                col-xl-6
-                offset-lg-2
-                col-lg-8 col-md-12 col-sm-12
-              "
+              class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 col-md-12 col-sm-12"
             >
               <div class="">
                 <p
@@ -274,7 +269,7 @@
                   data-scroll-reveal="enter bottom move 50px over 0.4s after 0.2s"
                   class=""
                 >
-                  Hi 👋, I'm Ayush
+                  Hi <span class="waving-hand">👋</span>, I'm Ayush
                 </p>
                 <div
                   data-scroll-reveal="enter bottom move 50px over 0.6s after 0.6s"
@@ -797,11 +792,7 @@
           </div>
           <div class="col-lg-1"></div>
           <div
-            class="
-              col-lg-6 col-md-12 col-sm-12
-              align-self-center
-              mobile-top-fix
-            "
+            class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix"
             data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
           >
             <div class="left-heading">
@@ -849,12 +840,7 @@
       <div class="container">
         <div class="row">
           <div
-            class="
-              col-lg-5 col-md-12 col-sm-12
-              align-self-center
-              mobile-bottom-fix-big
-              show-on-mobile
-            "
+            class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-mobile"
             data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
           >
             <img
@@ -867,11 +853,7 @@
             />
           </div>
           <div
-            class="
-              col-lg-6 col-md-12 col-sm-12
-              align-self-center
-              mobile-bottom-fix
-            "
+            class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-bottom-fix"
             data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
           >
             <div class="left-heading">
@@ -883,9 +865,9 @@
                 - Basic, Standard, and Premium. Ask me anything is common for
                 all the plans and you can ask me anything related to design,
                 business, career advice, etc. <br /><br />
-                This mentoring is generally catered to aspiring designers to
+                This mentorship session is generally catered to aspiring to
                 junior and mid-level designers with 0-4+ years of experience. If
-                you in the industry for a long time, I can help you with the
+                you are in the industry for a long time, I can help you with the
                 business of design and how to raise your prices.
               </p>
               <p class="mob">
@@ -893,21 +875,16 @@
                 - Basic, Standard, and Premium. Ask me anything is common for
                 all the plans and you can ask me anything related to design,
                 business, career advice, etc. <br /><br />
-                This mentoring is generally catered to aspiring designers to
+                This mentorship session is generally catered to aspiring to
                 junior and mid-level designers with 0-4+ years of experience. If
-                you in the industry for a long time, I can help you with the
+                you are in the industry for a long time, I can help you with the
                 business of design and how to raise your prices.
               </p>
             </div>
           </div>
           <div class="col-lg-1"></div>
           <div
-            class="
-              col-lg-5 col-md-12 col-sm-12
-              align-self-center
-              mobile-bottom-fix-big
-              show-on-desktop
-            "
+            class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-desktop"
             data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
           >
             <img
@@ -942,11 +919,7 @@
           </div>
           <div class="col-lg-1"></div>
           <div
-            class="
-              col-lg-6 col-md-12 col-sm-12
-              align-self-center
-              mobile-top-fix
-            "
+            class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix"
             data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
           >
             <div class="left-heading">
@@ -960,7 +933,7 @@
                 <a href="https://ayushkumar.me/about">ayushkumar.me/about</a> to
                 know about me. <br /><br />
                 I'm also active on Instagram, Dribbble, and LinkedIn, so feel
-                free to reach out. If, you need anything else, please reach out
+                free to reach out. If you need anything else, please reach out
                 at
                 <a href="mailto:hey@ayushkumar.me"> hey@ayushkumar.me.</a>
               </p>
@@ -971,7 +944,7 @@
                 <a href="https://ayushkumar.me/about">ayushkumar.me/about</a> to
                 know about me. <br /><br />
                 I'm also active on Instagram, Dribbble, and LinkedIn, so feel
-                free to reach out. If, you need anything else, please reach out
+                free to reach out. If you need anything else, please reach out
                 at
                 <a href="mailto:hey@ayushkumar.me"> hey@ayushkumar.me.</a>
               </p>
@@ -1060,11 +1033,7 @@
           </div>
           <div class="col-lg-1"></div>
           <div
-            class="
-              col-lg-6 col-md-12 col-sm-12
-              align-self-center
-              mobile-top-fix
-            "
+            class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix"
             data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
           >
             <div class="left-heading">
@@ -1112,12 +1081,7 @@
       <div class="container">
         <div class="row">
           <div
-            class="
-              col-lg-5 col-md-12 col-sm-12
-              align-self-center
-              mobile-bottom-fix-big
-              show-on-mobile
-            "
+            class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-mobile"
             data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
           >
             <img
@@ -1130,11 +1094,7 @@
             />
           </div>
           <div
-            class="
-              col-lg-6 col-md-12 col-sm-12
-              align-self-center
-              mobile-bottom-fix
-            "
+            class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-bottom-fix"
             data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
           >
             <div class="left-heading">
@@ -1165,12 +1125,7 @@
           </div>
           <div class="col-lg-1"></div>
           <div
-            class="
-              col-lg-5 col-md-12 col-sm-12
-              align-self-center
-              mobile-bottom-fix-big
-              show-on-desktop
-            "
+            class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big show-on-desktop"
             data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"
           >
             <img
@@ -1208,11 +1163,7 @@
           </div>
           <div class="col-lg-1"></div>
           <div
-            class="
-              col-lg-6 col-md-12 col-sm-12
-              align-self-center
-              mobile-top-fix
-            "
+            class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-top-fix"
             data-scroll-reveal="enter bottom move 50px over 0.4s after 0s"
           >
             <div class="left-heading">
