--- a/solutions.html
+++ b/solutions.html
@@ -272,7 +272,7 @@
                 <div class="price-wrapper">
                   <span class="currency">$</span>
                   <span class="price">15</span>
-                  <span class="period">per project</span>
+                  <span class="period">onwards</span>
                 </div>
                 <ul class="list">
                   <li class="active">Product Audit</li>
@@ -303,7 +303,7 @@
                 <div class="price-wrapper">
                   <span class="currency">$</span>
                   <span class="price">50</span>
-                  <span class="period">per project</span>
+                  <span class="period">onwards</span>
                 </div>
                 <ul class="list">
                   <li class="active">Product Audit</li>
@@ -336,7 +336,7 @@
                 <div class="price-wrapper">
                   <span class="currency">$</span>
                   <span class="price">1000</span>
-                  <span class="period">per project</span>
+                  <span class="period">onwards</span>
                 </div>
                 <ul class="list">
                   <li class="active">Product Audit</li>
@@ -372,7 +372,7 @@
                 <div class="price-wrapper">
                   <span class="currency">$</span>
                   <span class="price">1500</span>
-                  <span class="period">per project</span>
+                  <span class="period">onwards</span>
                 </div>
                 <ul class="list">
                   <li class="active">Strategy</li>
@@ -402,7 +402,7 @@
                 <div class="price-wrapper">
                   <span class="currency">$</span>
                   <span class="price">3000</span>
-                  <span class="period">per project</span>
+                  <span class="period">onwards</span>
                 </div>
                 <ul class="list">
                   <li class="active">Strategy</li>
@@ -477,22 +477,22 @@
                 class="pricepara desk"
                 style="line-height: 200%; font-weight: 400"
               >
-                Learn how I can help you in a 15 min free consultation call!
+                Learn how I can help you in a 30min free consultation call!
               </p>
               <p
                 class="pricepara mob"
                 style="line-height: 200%; font-weight: 400"
               >
-                Learn how I can help you in a <br />15 min free consultation
+                Learn how I can help you in a <br />30min free consultation
                 call!
               </p>
               <br />
               <a
-                href="https://calendly.com/ux-consultation/15min"
+                href="https://calendly.com/designedbyayush/call"
                 aria-label=""
                 class="main-button-slider"
-                title="Book Free Consultation"
-                aria-label="Book Free Consultation"
+                title="Book Free 30min Consultation on Calendly"
+                aria-label="Book Free 30min Consultation on Calendly"
                 >Book Free Consultation</a
               >
             </div>
@@ -571,15 +571,6 @@
                     class="download"
                     title="Download Resume"
                     >Resume</a
-                  ></span
-                >
-                and
-                <span
-                  ><a
-                    href="https://bit.ly/ayushkumar"
-                    class="download"
-                    title="Download Portfolio"
-                    >Portfolio</a
                   ></span
                 >
               </p>
