--- a/work.html
+++ b/work.html
@@ -625,22 +625,21 @@
                 class="pricepara desk"
                 style="line-height: 200%; font-weight: 400"
               >
-                Learn how I can help you in a 15 min free consultation call!
+                Learn how I can help you in a 30min free consultation call!
               </p>
               <p
                 class="pricepara mob"
                 style="line-height: 200%; font-weight: 400"
               >
-                Learn how I can help you in a <br />15 min free consultation
+                Learn how I can help you in a <br />30 min free consultation
                 call!
               </p>
               <br />
               <a
-                href="https://calendly.com/ux-consultation/15min"
-                aria-label=""
+                href="https://calendly.com/designedbyayush/call"
                 class="main-button-slider"
-                title="Book Free Consultation"
-                aria-label="Book Free Consultation"
+                title="Book Free 30min Consultation on Calendly"
+                aria-label="Book Free 30min Consultation on Calendly"
                 >Book Free Consultation</a
               >
             </div>
@@ -719,15 +718,6 @@
                     class="download"
                     title="Download Resume"
                     >Resume</a
-                  ></span
-                >
-                and
-                <span
-                  ><a
-                    href="https://bit.ly/ayushkumar"
-                    class="download"
-                    title="Download Portfolio"
-                    >Portfolio</a
                   ></span
                 >
               </p>
